--- a/code.html
+++ b/code.html
@@ -17,10 +17,10 @@
   
 
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="http://localhost:4000/code">
+  <link rel="canonical" href="https://cleverna.me/code">
   
   
-  <link rel="alternate" type="application/rss+xml" title="Clever Name" href="http://localhost:4000/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Clever Name" href="https://cleverna.me/feed.xml">
 
   
 
@@ -34,7 +34,7 @@
 
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
 
   
 
@@ -91,7 +91,7 @@
   
   <a href="https://github.com/JonnieCache/fml">
     <div class="card">
-      <a href="/assets/img/fml_logo.jpg" target="_blank" class="thumb"><img src="/assets/img/fml_logo-254w.jpg" width="254" link="false" height="102" /></a>
+      <img src="/assets/img/fml_logo-254w.jpg" width="254" height="102" />
       FML
     </div>
   </a>
@@ -127,7 +127,7 @@
     <p>
       
 
-&copy;  - Powered by <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="http://localhost:4000/feed.xml">RSS</a>
+&copy;  - Powered by <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="https://cleverna.me/feed.xml">RSS</a>
 
     </p>
 
