--- a/404/index.html
+++ b/404/index.html
@@ -17,10 +17,10 @@
   
 
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="https://cleverna.me/404/">
+  <link rel="canonical" href="http://0.0.0.0:3000/404/">
   
   
-  <link rel="alternate" type="application/rss+xml" title="Clever Name" href="https://cleverna.me/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Clever Name" href="http://0.0.0.0:3000/feed.xml">
 
   
 
@@ -103,7 +103,7 @@
     <p>
       
 
-&copy;  - Powered by <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="https://cleverna.me/feed.xml">RSS</a>
+&copy;  - Powered by <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="http://0.0.0.0:3000/feed.xml">RSS</a>
 
     </p>
 
